--- a/index.css
+++ b/index.css
@@ -16,7 +16,7 @@ html, body {
 }
 
 .nav-link {
-    color: blue !important;
+    color: white !important;
     text-decoration: none !important;
 }
 
