--- a/index.css
+++ b/index.css
@@ -16,7 +16,7 @@ html, body {
 /* Body Container */
 .body-container {
     display: flex;
-    flex-direction: column;
+    /*flex-direction: column;*/
     min-height: 100vh;
 }
 
