--- a/index.css
+++ b/index.css
@@ -1,4 +1,5 @@
 /* General Styles */
+/*
 html, body {
     background-color: white;
     font-family: 'Golos Text', sans-serif;
@@ -6,6 +7,7 @@ html, body {
     padding: 0;
     height: 100%;
 }
+*/
 
 
 /* Dropdown */
