--- a/index.css
+++ b/index.css
@@ -1,5 +1,5 @@
 /* General Styles */
-/*
+
 html, body {
     background-color: white;
     font-family: 'Golos Text', sans-serif;
@@ -7,7 +7,7 @@ html, body {
     padding: 0;
     height: 100%;
 }
-*/
+
 
 
 /* Dropdown */
@@ -18,7 +18,7 @@ html, body {
 /* Body Container */
 .body-container {
     display: flex;
-    /*flex-direction: column;*/
+    flex-direction: column;
     min-height: 100vh;
 }
 
