--- a/navbar.css
+++ b/navbar.css
@@ -110,9 +110,9 @@
     }
 
     .navbar__menu{
-        display: flex;
-        flex-direction: column;
-        align-items: center;
+        display: grid;
+        grid-template-columns:auto;
+        margin: 0;
         width: 100%;
         position: absolute;
         top: -1000px;
